--- a/agradecimento.html
+++ b/agradecimento.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agradecimento</title>
-    <link rel="stylesheet" href="/src/css/agradecimento.css">
+    <link rel="stylesheet" href="src/css/agradecimento.css">
 </head>
 
 <body>
     <header id="cabecalho">
-        <img src="/src/img/Imagem1.png" alt="">
+        <img src="src/img/Imagem1.png" alt="">
         <div>
             Obrigado pela colaboração!
         </div>
