--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doação de orgãos</title>
-    <link rel="stylesheet" href="/src/css/index.css">
-    <link rel="stylesheet" href="/src/css/formulario.css">
+    <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="src/css/formulario.css">
 </head>
 
 <body>
     <header id="cabecalho">
-        <img src="/src/img/Logo.svg" alt="">
+        <img src="src/img/Logo.svg" alt="">
         <h1>Hospital Municipal<br><span style="visibility: hidden;">.....</span>Mariana Maria de Jesus</h1>
         <button class="beneficios"><a href="motivacao.html">Benefícios</a></button>
         <button class="sobre"><a href="sobre.html">Sobre</a></button>
@@ -79,13 +79,13 @@
     <footer id="rodape">
         <p>“A medida da vida não é sua duração, mas a sua doação.”</p>
         <h3><strong>Redes Sociais</strong></h3>
-        <img src="/src/img/instagram.svg" alt="">
-        <img src="/src/img/whatsapp.svg" alt="">
-        <img src="/src/img/facebook.svg" alt="">
-        <img src="/src/img/youtube.svg" alt="">
+        <img src="src/img/instagram.svg" alt="">
+        <img src="src/img/whatsapp.svg" alt="">
+        <img src="src/img/facebook.svg" alt="">
+        <img src="src/img/youtube.svg" alt="">
     </footer>
 
-    <script src="/src/js/formulario.js"></script>
+    <script src="src/js/formulario.js"></script>
 
 </body>
 
