--- a/motivacao.html
+++ b/motivacao.html
@@ -41,7 +41,7 @@
             <p>No esforço de conscientizar a população sobre a necessidade de doar é que setembro foi estabelecido como
                 o mês de incentivo à doação de órgãos com datas alusivas, como o Dia Nacional da Doação de Órgãos, em 27
                 de setembro.</p>
-            <img src="/src/img/setembro-verde-laco_21384_img 1.png" alt="">
+            <img src="src/img/setembro-verde-laco_21384_img 1.png" alt="">
         </section>
 
         <div id="mainFormulario" class="input-group">
@@ -105,7 +105,7 @@
         <button id="formularioBotao" class="serdoador">Quero ser um doador</a></button>
     </footer>
 
-    <script src="/src/js/formulario.js"></script>
+    <script src="src/js/formulario.js"></script>
 </body>
 
 </html>
