--- a/sobre.html
+++ b/sobre.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
-    <link rel="stylesheet" href="/src/css/sobre.css">
+    <link rel="stylesheet" href="src/css/sobre.css">
 </head>
 
 <body>
     <header id="cabecalho">
-        <img src="/src/img/Logo.svg" alt="">
+        <img src="src/img/Logo.svg" alt="">
         <h1>Hospital Municipal Mariana Maria de Jesus</h1>
     </header>
 
     <main id="conteudo">
-        <img class="img-1" src="/src/img/hospital.jpg" alt="">
+        <img class="img-1" src="src/img/hospital.jpg" alt="">
         <p class="text-1">Localizado no município de Quissamã, Norte Fluminense do Rio de Janeiro, o Hospital Municipal
             Mariana Maria
             de Jesus (HMMML), oferece atendimento de Urgência e Emergência 24 horas e conta com internação em Clínica
@@ -37,7 +37,7 @@
             8,5 mil exames radiológicos e 1,5 mil internações. Na maternidade, foram realizados de 314 partos, sendo 87
             normais e 227 cesarianas.
         </p>
-        <img class="img-2" src="/src/img/corredor.webp" alt="">
+        <img class="img-2" src="src/img/corredor.webp" alt="">
         <p class="text-2">
             O Hospital Municipal Mariana Maria de Jesus possui uma Comissão Intra-Hospitalar de Doação de Órgãos e
             Tecidos para Transplantes (CIHDOTT), essa comissão é composta por um equipe multidisciplinar que atua de
