--- a/motivacao.html
+++ b/motivacao.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benefícios</title>
-    <link rel="stylesheet" href="/src/css/motivacao.css">
-    <link rel="stylesheet" href="/src/css/formulario.css">
+    <link rel="stylesheet" href="src/css/motivacao.css">
+    <link rel="stylesheet" href="src/css/formulario.css">
 </head>
 
 <body>
     <header id="cabecalho">
-        <img src="/src/img/Imagem1.png" alt="">
+        <img src="src/img/Imagem1.png" alt="">
         <div>
             <p>Por que se tornar um doador?</p>
         </div>
@@ -25,11 +25,11 @@
                 transplante, permitindo o restabelecimento da saúde e, por consequência, a retomada das atividades
                 normais. Devido ao número de partes do corpo que podem ser cedidas, cada doador pode salvar oito vidas
                 ou mais.</p>
-            <img src="/src/img/download 1.png" alt="">
+            <img src="src/img/download 1.png" alt="">
         </section>
 
         <section class="secao-2">
-            <img src="/src/img/images (1) 1.png" alt="">
+            <img src="src/img/images (1) 1.png" alt="">
             <p>Somadas, as doações de órgãos e tecidos possibilitaram que 27.688 transplantes fossem realizados em 2019,
                 de acordo com o Ministério da Saúde.
 
