--- a/agradecimento.html
+++ b/agradecimento.html
@@ -30,6 +30,33 @@
             continuidade
             de vida!
         </p>
+
+        <h1 id="colaboradores">Colaboradores:</h1>
+
+        <div id="mainColab">
+            <table>
+                <tr>
+                    <th>Nome</th>
+                    <th>Idade</th>
+                    <th>Email</th>
+                    <th>Telefone</th>
+                    <th>CEP</th>
+                    <th>Endereço</th>
+                    <th>Sangue</th>
+                </tr>
+               
+                    <tr>
+                        <td>Exemplo de nome</td>
+                        <td>11-09-2000</td>
+                        <td>Exemplodeemail@gmail.com</td>
+                        <td>22 99412-4123</td>
+                        <td>41241-5112</td>
+                        <td>Rua Pinheiro da Silva</td>
+                        <td>O+</td>
+                    </tr>
+            </table>
+        </div>
+
         <button id="voltar">
             <a href="index.html">Voltar</a>
         </button>
